設定画面のサイドメニュー画面遷移

--- a/teacher/pubspec.yaml
+++ b/teacher/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
   sdk: '>=3.2.3 <4.0.0'
 
 dependencies:
+  http:
   table_calendar: #カレンダー設定
   device_preview: #各デバイス画面のプレビューの設定
   freezed_annotation:
