--- a/teacher/pubspec.yaml
+++ b/teacher/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   riverpod:
   riverpod_annotation:
   shared_preferences: ^2.0.8
+  flutter_spinkit: ^5.2.0
 
   flutter:
     sdk: flutter
